# plateau2minecraft

./: .gitignore  Makefile  README.md  pyproject.toml
src/plateau2minecraft/: __main__.py  combine_meshes.py  converter.py  feature_color.py  impart_color.py  merge_points.py  parser.py  types.py  voxelizer.py
src/plateau2minecraft/anvil/: __init__.py  biome.py  block.py  chunk.py  empty_chunk.py  empty_region.py  empty_section.py  errors.py  legacy.py  legacy_biomes.json  legacy_blocks.json  raw_section.py  region.py  ro_chunk.py  ro_region.py  section.py
src/plateau2minecraft/earcut/: __init__.py  utils_3d.py
