[tool.poetry]
name = "plateau2minecraft"
version = "0.0.1"
description = ""
authors = ["MIERUNE Inc. <info@mierune.co.jp>"]
readme = "README.md"
packages = [{include = "plateau2minecraft", from = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.25.0"
trimesh = "^3.22.1"
open3d = "0.16.0"
lxml = "^4.9.2"
geopandas = "^0.13.2"
scipy = "^1.10.1"
nbt = "^1.5.1"
frozendict = "^2.3.8"
networkx = "^3.1"
pyglet = "1.5.27"

[tool.poetry.group.dev.dependencies]
black = "^23.3"
ruff = "^0.0.269"
pytest = "^7.3"
pytest-cov = "^4.0"
pyright = "^1.1.309"

[tool.black]
line-length = 119

[tool.ruff]
line-length = 119
select = [
  "E",    # pycodestyle errors (default)
  "W",    # pycodestyle warnings
  "F",    # pyflakes (default)
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "DTZ",  # flake8-datetimez
  "PIE",  # flake8-pie
  "Q",    # flake8-quotes
  "PT",   # flake8-pytest-style
  "SIM",  # flake8-simplify
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "C90",  # mccabe
  "PD",   # pandas-vet
  "RUF",  # Ruff-specific rules
  "I",    # isort
]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest]
addopts = ["--import-mode=importlib"]

[tool.pyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
executionEnvironments = [
    { root = "src" },
    { root = "test", extraPaths = [
        "src",
        ".",
    ] },
]
exclude = ["**/__pycache__", ".venv/**"]
